# repo-publication-gate

./: .gitignore  .repo-publication-gate.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  PUBLISH_TO_GITHUB.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SELF_AUDIT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: RULES.md  THREAT_MODEL.md
src/repo_publication_gate/: __init__.py  cli.py  config.py  models.py  report.py  rules.py  scanner.py
tests/: test_cli.py  test_config.py  test_report.py  test_scanner.py
